src/main/lexerParser/gen/ttParser.java
package main.lexerParser.gen;// Generated from C:/Users/bartl/git/TT/grammar\tt.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ttParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTEGER_TYPE=1, STRING_TYPE=2, TIMETABLE_TYPE=3, TIMETABLE_DATA_TYPE=4, 
		LEFT_ROUND_BRACKET=5, RIGHT_ROUND_BRACKET=6, LEFT_CURLY_BRACKET=7, RIGHT_CURLY_BRACKET=8, 
		DOT=9, PRINT=10, LIST_TIMETABLE=11, OPEN_TT_DATA=12, GEN_TIMETABLE=13, 
		PRINT_TT_STATS=14, PRINT_TT_DATA_STATS=15, GEN_PDF=16, GET_FITNESS=17, 
		GET_CLASSROOMS=18, SEMICOLON=19, IF=20, ELSE=21, FOREACH=22, WHILE=23, 
		COLON=24, ASSIGNMENT=25, OR=26, AND=27, COMPARISON=28, PLUS=29, MINUS=30, 
		MULTIPLY=31, DIVIDE=32, VARIABLE_NAME=33, INTEGER=34, STRING=35, COMMA=36, 
		COMMENT=37, WHITESPACE=38;
	public static final int
		RULE_script = 0, RULE_instructions = 1, RULE_condition = 2, RULE_alternative = 3, 
		RULE_conjunction = 4, RULE_comparison = 5, RULE_mathExpression = 6, RULE_statement = 7, 
		RULE_if_statement = 8, RULE_while_statement = 9, RULE_for_loop = 10, RULE_declaration_statement = 11, 
		RULE_assignement_statement = 12, RULE_timetable_statements = 13, RULE_print_statement = 14, 
		RULE_print_tt_statistics = 15, RULE_print_tt_data_statistics = 16, RULE_generate_PDF = 17, 
		RULE_list_tt_statement = 18, RULE_open_timetable_data = 19, RULE_gen_timetable = 20, 
		RULE_return_statement = 21, RULE_get_fitness = 22, RULE_get_classroom_count = 23, 
		RULE_type_declaration = 24, RULE_string_declaration = 25, RULE_int_declaration = 26, 
		RULE_timetable_data_declaration = 27, RULE_timetable_declaration = 28, 
		RULE_type_assignment = 29, RULE_string_assignment = 30, RULE_int_assignment = 31, 
		RULE_timetable_data_assignment = 32, RULE_timetable_assignment = 33, RULE_print_types = 34, 
		RULE_type = 35, RULE_timetable_type = 36, RULE_timetable_data_type = 37, 
		RULE_int_type = 38, RULE_string_type = 39;
	public static final String[] ruleNames = {
		"script", "instructions", "condition", "alternative", "conjunction", "comparison", 
		"mathExpression", "statement", "if_statement", "while_statement", "for_loop", 
		"declaration_statement", "assignement_statement", "timetable_statements", 
		"print_statement", "print_tt_statistics", "print_tt_data_statistics", 
		"generate_PDF", "list_tt_statement", "open_timetable_data", "gen_timetable", 
		"return_statement", "get_fitness", "get_classroom_count", "type_declaration", 
		"string_declaration", "int_declaration", "timetable_data_declaration", 
		"timetable_declaration", "type_assignment", "string_assignment", "int_assignment", 
		"timetable_data_assignment", "timetable_assignment", "print_types", "type", 
		"timetable_type", "timetable_data_type", "int_type", "string_type"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Integer'", "'String'", "'Timetable'", "'TimetableData'", "'('", 
		"')'", "'{'", "'}'", "'.'", "'print'", "'listAll'", "'openTTData'", "'genTimetable'", 
		"'printStats'", "'printDataStats'", "'genPDF'", "'getFitness'", "'getClassroomCount'", 
		"';'", "'if'", "'else'", "'forEach'", "'while'", "':'", "'='", "'or'", 
		"'and'", null, "'+'", "'-'", "'*'", "'/'", null, null, null, "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INTEGER_TYPE", "STRING_TYPE", "TIMETABLE_TYPE", "TIMETABLE_DATA_TYPE", 
		"LEFT_ROUND_BRACKET", "RIGHT_ROUND_BRACKET", "LEFT_CURLY_BRACKET", "RIGHT_CURLY_BRACKET", 
		"DOT", "PRINT", "LIST_TIMETABLE", "OPEN_TT_DATA", "GEN_TIMETABLE", "PRINT_TT_STATS", 
		"PRINT_TT_DATA_STATS", "GEN_PDF", "GET_FITNESS", "GET_CLASSROOMS", "SEMICOLON", 
		"IF", "ELSE", "FOREACH", "WHILE", "COLON", "ASSIGNMENT", "OR", "AND", 
		"COMPARISON", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "VARIABLE_NAME", 
		"INTEGER", "STRING", "COMMA", "COMMENT", "WHITESPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tt.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ttParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ttVisitor ) return ((ttVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER_TYPE) | (1L << STRING_TYPE) | (1L << TIMETABLE_TYPE) | (1L << TIMETABLE_DATA_TYPE) | (1L << PRINT) | (1L << SEMICOLON) | (1L << IF) | (1L << FOREACH) | (1L << WHILE) | (1L << VARIABLE_NAME))) != 0)) {
				{
				{
				setState(80);
				statement();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionsContext extends ParserRuleContext {
		public TerminalNode LEFT_CURLY_BRACKET() { return getToken(ttParser.LEFT_CURLY_BRACKET, 0); }
		public TerminalNode RIGHT_CURLY_BRACKET() { return getToken(ttParser.RIGHT_CURLY_BRACKET, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public InstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).enterInstructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).exitInstructions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ttVisitor ) return ((ttVisitor<? extends T>)visitor).visitInstructions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionsContext instructions() throws RecognitionException {
		InstructionsContext _localctx = new InstructionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instructions);
		int _la;
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEFT_CURLY_BRACKET:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(86);
				match(LEFT_CURLY_BRACKET);
				setState(88); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(87);
					statement();
					}
					}
					setState(90); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER_TYPE) | (1L << STRING_TYPE) | (1L << TIMETABLE_TYPE) | (1L << TIMETABLE_DATA_TYPE) | (1L << PRINT) | (1L << SEMICOLON) | (1L << IF) | (1L << FOREACH) | (1L << WHILE) | (1L << VARIABLE_NAME))) != 0) );
				setState(92);
				match(RIGHT_CURLY_BRACKET);
				}
				}
				break;
			case INTEGER_TYPE:
			case STRING_TYPE:
			case TIMETABLE_TYPE:
			case TIMETABLE_DATA_TYPE:
			case PRINT:
			case SEMICOLON:
			case IF:
			case FOREACH:
			case WHILE:
			case VARIABLE_NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public TerminalNode LEFT_ROUND_BRACKET() { return getToken(ttParser.LEFT_ROUND_BRACKET, 0); }
		public AlternativeContext alternative() {
			return getRuleContext(AlternativeContext.class,0);
		}
		public TerminalNode RIGHT_ROUND_BRACKET() { return getToken(ttParser.RIGHT_ROUND_BRACKET, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).exitCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ttVisitor ) return ((ttVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(LEFT_ROUND_BRACKET);
			setState(98);
			alternative();
			setState(99);
			match(RIGHT_ROUND_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlternativeContext extends ParserRuleContext {
		public List<ConjunctionContext> conjunction() {
			return getRuleContexts(ConjunctionContext.class);
		}
		public ConjunctionContext conjunction(int i) {
			return getRuleContext(ConjunctionContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(ttParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(ttParser.OR, i);
		}
		public AlternativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternative; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).enterAlternative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).exitAlternative(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ttVisitor ) return ((ttVisitor<? extends T>)visitor).visitAlternative(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlternativeContext alternative() throws RecognitionException {
		AlternativeContext _localctx = new AlternativeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_alternative);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			conjunction();
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(102);
				match(OR);
				setState(103);
				conjunction();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConjunctionContext extends ParserRuleContext {
		public List<ComparisonContext> comparison() {
			return getRuleContexts(ComparisonContext.class);
		}
		public ComparisonContext comparison(int i) {
			return getRuleContext(ComparisonContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(ttParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(ttParser.AND, i);
		}
		public ConjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conjunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).enterConjunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).exitConjunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ttVisitor ) return ((ttVisitor<? extends T>)visitor).visitConjunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConjunctionContext conjunction() throws RecognitionException {
		ConjunctionContext _localctx = new ConjunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_conjunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			comparison();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(110);
				match(AND);
				setState(111);
				comparison();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonContext extends ParserRuleContext {
		public TerminalNode COMPARISON() { return getToken(ttParser.COMPARISON, 0); }
		public List<TerminalNode> VARIABLE_NAME() { return getTokens(ttParser.VARIABLE_NAME); }
		public TerminalNode VARIABLE_NAME(int i) {
			return getToken(ttParser.VARIABLE_NAME, i);
		}
		public List<TerminalNode> INTEGER() { return getTokens(ttParser.INTEGER); }
		public TerminalNode INTEGER(int i) {
			return getToken(ttParser.INTEGER, i);
		}
		public List<Return_statementContext> return_statement() {
			return getRuleContexts(Return_statementContext.class);
		}
		public Return_statementContext return_statement(int i) {
			return getRuleContext(Return_statementContext.class,i);
		}
		public List<MathExpressionContext> mathExpression() {
			return getRuleContexts(MathExpressionContext.class);
		}
		public MathExpressionContext mathExpression(int i) {
			return getRuleContext(MathExpressionContext.class,i);
		}
		public ComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).enterComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).exitComparison(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ttVisitor ) return ((ttVisitor<? extends T>)visitor).visitComparison(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparisonContext comparison() throws RecognitionException {
		ComparisonContext _localctx = new ComparisonContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_comparison);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(117);
				match(VARIABLE_NAME);
				}
				break;
			case 2:
				{
				setState(118);
				match(INTEGER);
				}
				break;
			case 3:
				{
				setState(119);
				return_statement();
				}
				break;
			case 4:
				{
				setState(120);
				mathExpression();
				}
				break;
			}
			setState(123);
			match(COMPARISON);
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(124);
				match(VARIABLE_NAME);
				}
				break;
			case 2:
				{
				setState(125);
				match(INTEGER);
				}
				break;
			case 3:
				{
				setState(126);
				return_statement();
				}
				break;
			case 4:
				{
				setState(127);
				mathExpression();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MathExpressionContext extends ParserRuleContext {
		public TerminalNode LEFT_ROUND_BRACKET() { return getToken(ttParser.LEFT_ROUND_BRACKET, 0); }
		public TerminalNode RIGHT_ROUND_BRACKET() { return getToken(ttParser.RIGHT_ROUND_BRACKET, 0); }
		public TerminalNode PLUS() { return getToken(ttParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(ttParser.MINUS, 0); }
		public TerminalNode MULTIPLY() { return getToken(ttParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(ttParser.DIVIDE, 0); }
		public List<TerminalNode> VARIABLE_NAME() { return getTokens(ttParser.VARIABLE_NAME); }
		public TerminalNode VARIABLE_NAME(int i) {
			return getToken(ttParser.VARIABLE_NAME, i);
		}
		public List<TerminalNode> INTEGER() { return getTokens(ttParser.INTEGER); }
		public TerminalNode INTEGER(int i) {
			return getToken(ttParser.INTEGER, i);
		}
		public List<Return_statementContext> return_statement() {
			return getRuleContexts(Return_statementContext.class);
		}
		public Return_statementContext return_statement(int i) {
			return getRuleContext(Return_statementContext.class,i);
		}
		public List<MathExpressionContext> mathExpression() {
			return getRuleContexts(MathExpressionContext.class);
		}
		public MathExpressionContext mathExpression(int i) {
			return getRuleContext(MathExpressionContext.class,i);
		}
		public MathExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mathExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).enterMathExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).exitMathExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ttVisitor ) return ((ttVisitor<? extends T>)visitor).visitMathExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MathExpressionContext mathExpression() throws RecognitionException {
		MathExpressionContext _localctx = new MathExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mathExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(LEFT_ROUND_BRACKET);
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(131);
				match(VARIABLE_NAME);
				}
				break;
			case 2:
				{
				setState(132);
				match(INTEGER);
				}
				break;
			case 3:
				{
				setState(133);
				return_statement();
				}
				break;
			case 4:
				{
				setState(134);
				mathExpression();
				}
				break;
			}
			setState(137);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << MULTIPLY) | (1L << DIVIDE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(142);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(138);
				match(VARIABLE_NAME);
				}
				break;
			case 2:
				{
				setState(139);
				match(INTEGER);
				}
				break;
			case 3:
				{
				setState(140);
				return_statement();
				}
				break;
			case 4:
				{
				setState(141);
				mathExpression();
				}
				break;
			}
			setState(144);
			match(RIGHT_ROUND_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public While_statementContext while_statement() {
			return getRuleContext(While_statementContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public Declaration_statementContext declaration_statement() {
			return getRuleContext(Declaration_statementContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ttParser.SEMICOLON, 0); }
		public Assignement_statementContext assignement_statement() {
			return getRuleContext(Assignement_statementContext.class,0);
		}
		public Timetable_statementsContext timetable_statements() {
			return getRuleContext(Timetable_statementsContext.class,0);
		}
		public Print_statementContext print_statement() {
			return getRuleContext(Print_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ttVisitor ) return ((ttVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		try {
			setState(162);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				if_statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				while_statement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(148);
				for_loop();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(149);
				declaration_statement();
				setState(150);
				match(SEMICOLON);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(152);
				assignement_statement();
				setState(153);
				match(SEMICOLON);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(155);
				timetable_statements();
				setState(156);
				match(SEMICOLON);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(158);
				print_statement();
				setState(159);
				match(SEMICOLON);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(161);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_statementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(ttParser.IF, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<InstructionsContext> instructions() {
			return getRuleContexts(InstructionsContext.class);
		}
		public InstructionsContext instructions(int i) {
			return getRuleContext(InstructionsContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(ttParser.ELSE, 0); }
		public If_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).enterIf_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ttListener ) ((ttListener)listener).exitIf_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ttVisitor ) return ((ttVisitor<? extends T>)visitor).visitIf_statement(this);
			else return visitor.visitChildren(this);
		}
	}
